# back-blog-go

./: .gitignore  :w  Makefile  README.md  TODO.md  docker-compose-apps.live.yml  docker-compose-apps.yml  docker-compose-infra.live.yml  docker-compose-infra.yml  docker-compose.live.yml  docker-compose.yml  e2e_tests  go.mod  post_test  prod.nix  req_test  shell.nix
caddy/live/: Caddyfile
caddy/local/: Caddyfile
front/: Dockerfile  Makefile  app.tsx
front/components/: footer.tsx  goBack.tsx  header.tsx  mainTop.tsx  pic.tsx  postDetail.tsx  summaryList.tsx
front/lib/: config.ts  entries.ts  fetchAll.ts  fetchOne.ts  transformDate.ts
front/pages/: index.tsx  post.tsx
front/style/: index.css
gateway/: .build.rs  Cargo.toml  Dockerfile  Makefile
gateway/src/: auth.rs  grpc_authenticator.rs  http_client.rs  http_handler.rs  jwt.rs  main.rs  mem_storage.rs  nats_client.rs  post.rs  post_reader.rs  store.rs  user.rs
log/: go.mod
log/pkg/: log.go
logger/: go.mod
logger/pkg/: logger.go
nginx/: nginx.conf
nginx/cert.d/: nginx.conf
nginx/conf.d/: app.conf  default.conf  nginx.conf
nix/: sources.json
post/: Dockerfile  Makefile  go.mod  go.sum  user_drpc.pb.go
post/broker/: broker.go  broker_test.go
post/command/: handler.go  handler_test.go  mock_test.go
post/eventbus/: event_bus.go  event_bus_test.go  mock_test.go
post/handlers/: handlers.go  handlers_test.go
scripts/: deploy.sh  init-letsencrypt.sh  initle.sh  proto_all.sh  proto_compile.sh  test_all.sh
storefilter/: go.mod
storehelper/: go.mod  storehelper.go
user/: Dockerfile  Makefile  TODO.md  go.mod  go.sum  user.go  user_drpc.pb.go
(+64 files in other folders)
