[package]
name = "gateway"
version = "0.1.0"
authors = ["Leo Guercio <lpguercio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.x"
jwt = "0.14.x"
sha2 = "0.9.x"
hmac = "0.11.x"
serde = "1.0.x"
serde_json = "1.0.x"
