[package]
name = "gateway"
version = "0.1.0"
authors = ["Leo Guercio <lpguercio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.x"
jwt = "0.14.x"
sha2 = "0.9.x"
hmac = "0.11.x"
serde = "1.0.x"
serde_json = "1.0.x"
parking_lot = "0.11.x"
nats = "0.9.x"
bincode = "1.1.x"
reqwest = { version = "0.11.x", features = ["blocking", "json"] }
time = { version = "0.3.x", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tonic = "0.4.2" # gRPC
prost = "0.7.0" # protobuf
prost-types = "0.7.0" # protobuf's types
http = "0.2.4"

[build-dependencies]
tonic-build = "0.4.2"
